# pyhrg

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  README.md  environment.yaml  hrg.py  pyproject.toml
.github/workflows/: tests.yml
examples/: quickstart.py
pyhrg/: __init__.py  __main__.py  chm.py  cli.py  delineate.py  hrg.py  io.py  treetops.py
test_data/: chm_11_2013.tif  chm_150_2014.tif  chm_150_2023.tif  chm_33_2012.tif  chm_35_2019.tif  chm_42_2014.tif  chm_80_2021.tif
tests/: conftest.py  test_console_ascii.py  test_delineate.py  test_hrg.py  test_python39_compat.py  test_treetops.py  test_version_consistency.py
