[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyhrg"
version = "0.1.0"
description = "Individual tree crown delineation from canopy height models by Hierarchical Region Growing"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "GPL-3.0-or-later" }
authors = [
    { name = "Igor Pawelec", email = "igor.pawelec@urk.edu.pl" },
]
maintainers = [
    { name = "Igor Pawelec", email = "igor.pawelec@urk.edu.pl" },
]
keywords = [
    "tree-crown-delineation",
    "individual-tree-segmentation",
    "canopy-height-model",
    "region-growing",
    "watershed",
    "lidar",
    "forestry",
    "remote-sensing",
    "forest-inventory",
    "geospatial",
    "numba",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Operating System :: OS Independent",
]

# Core: the array API. numba and scikit-image are needed by the algorithm
# itself; rasterio/fiona are only needed to touch the disk.
dependencies = [
    "numpy>=1.21",
    "numba>=0.56",
    "scipy>=1.7",
    "scikit-image>=0.19",
]

[project.optional-dependencies]
io = ["rasterio>=1.3", "fiona>=1.9"]
test = ["pytest>=7.0", "affine"]
dev = ["pytest>=7.0", "affine", "pyflakes", "build"]
all = ["rasterio>=1.3", "fiona>=1.9"]

[project.urls]
Homepage = "https://github.com/igorpawelec/pyhrg"
Repository = "https://github.com/igorpawelec/pyhrg"
Issues = "https://github.com/igorpawelec/pyhrg/issues"
Changelog = "https://github.com/igorpawelec/pyhrg/blob/main/CHANGELOG.md"

[project.scripts]
pyhrg = "pyhrg.cli:main"

[tool.setuptools]
packages = ["pyhrg"]

[tool.pytest.ini_options]
testpaths = ["tests"]
